# Kube-Queue

./: .gitignore  README.md  kind-config.yaml
api/: dockerfile  pyproject.toml
api/src/kubequeue_api/: main.py
k8s/: api-deployment.yaml  api-hpa.yaml  api-ingress.yaml  api-service.yaml  configmap.yaml  redis-deployment.yaml  redis-service.yaml  worker-deployment.yaml  worker-hpa.yaml
worker/: Dockerfile  pyproject.toml
worker/src/kubequeue_worker/: worker.py
