[project]
name = "kubequeue_worker"
version = "0.1.0"
description = "Worker service for processing tasks from Redis queue"
authors = [
    {name = "Gaurav", email = "gauravgowda452@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0.0,<6.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [{ include = "kubequeue_worker", from = "src" }]
